@@ -27,6 +27,8 @@ Major changes from 1.3.x:
 * PhpTal skins shown bogus 'What links here' etc on special pages (bug #511)
 * Experimental code to manage user and group rights (Special:Userlevels)
 * UI language switching
+* Adding filter and username exact search match for Special:Listusers (bug #770)
+* Special:Listadmins outdated, use Special:Listusers instead (bug #857)
 * Traditional/Simplified Chinese conversion
 * ... and more!
 
